# yadoms-plugin-development-kit

pluginKit/: index.php  pluginKitGenerator.php  post.php  style.css
pluginKit/generation/monPlugin/sources/: CMakeLists.txt  Configuration.cpp  monPlugin.cmake  monPlugin.cpp  monPlugin.h  monPluginConf.cmake  package.json
pluginKit/generation/monPlugin/sources/locales/: en.json  fr.json
pluginKit/generation/temp/sources/: CMakeLists.txt  Configuration.h  package.json  temp.cmake  temp.cpp  temp.h
pluginKit/generation/temp/sources/locales/: en.json  fr.json
pluginKit/templateKit/sources/: CMakeLists.tmpl.txt  Plugin.tmpl.cmake  Plugin.tmpl.cpp  Plugin.tmpl.h  PluginConf.cmake  package.tmpl.json
pluginKit/templateKit/sources/locales/: en.tmpl.json  fr.tmpl.json
pluginKit/templateKit/static/: cmake_raspberry.sh  cmake_windows.cmd
